@@ -238,3 +238,13 @@ test inline-8.2 {
 Bad type in ##nagelfar comment in db apa.miffo line 4
 %%}
 
+test inline-9.1 {
+    Copy
+} -body {
+    createTestFile {
+        ##nagelfar copy string mystring
+        mystring length x x
+    }
+    execTestFile
+} -result {%%Line   3: E Wrong number of arguments (3) to "mystring length"}
+
